--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -1,16 +1,30 @@
  <!DOCTYPE html>
  
 <html> 
-<head> 
+ <head> 
     <title> Aidens portfolio website </title>
-    <link rel="stylesheet" type="text/css" href="style.css"
-</head>
+    <link rel="stylesheet" type="text/css" href="style.css" >
 <body> 
 <header> 
+
+
 <h1> Aiden Mackinnon </h1>
+<h2> IT generalist</h2>
+<nav > 
+<ul>
+<li><a href=" #">home </a></li>
+<li><a href="# "> about me </a> </li>
+<li><a href="# "> contact  </a> </li>
+</ul>
+</nav>
 
 </header>
-
+<main> 
+<section> 
+<h3> about me</h3>
+<p>  i am mostly interested in cybersecuirty and networking </p>
+</section>
+</main>
 
 
 
