--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -1,6 +1,6 @@
  <!DOCTYPE html>
- 
-<html> 
+ <html lang="eng"></html>
+<html>  
  <head> 
     <title> Aidens portfolio website </title>
     <link rel="stylesheet" type="text/css" href="style.css" >
@@ -27,6 +27,17 @@
 </main>
 
 
+
+
+<footer> 
+<p2> email: aidenmack26@gmail.com
+     author: Aiden Mackinnon
+
+</p2>
+
+
+
+</footer>
 
 </body>
 
