--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -22,21 +22,21 @@
 <main> 
 <section> 
 <h3> about me</h3>
-<p>  i am mostly interested in cybersecuirty and networking </p>
+<p>  i am mostly interested in cybersecurity and networking </p>
 </section>
 </main>
 
 
 
 
+
+
+
 <footer> 
  email: aidenmack26@gmail.com
-     author: Aiden Mackinnon
-
-
-
-
-
+     
+ 
+ author: Aiden Mackinnon
 </footer>
 
 </body>
