--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -4,7 +4,8 @@
  <head> 
     <title> Aidens portfolio website </title>
     <link rel="stylesheet" type="text/css" href="style.css" >
-<body> 
+    </head>
+    <body> 
 <header> 
 
 
@@ -17,7 +18,6 @@
 <li><a href="# "> contact  </a> </li>
 </ul>
 </nav>
-
 </header>
 <main> 
 <section> 
