--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -1,9 +1,10 @@
  <!DOCTYPE html>
- <html lang="eng"></html>
+ <html lang="zxx"></html>
 <html>  
  <head> 
     <title> Aidens portfolio website </title>
     <link rel="stylesheet" type="text/css" href="style.css" >
+    <meta charset="utf-8" /> 
     </head>
     <body> 
 <header> 
