--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -1,55 +1,39 @@
-style.css 
 
-body, h1, h2, h3 ul {
-
-  margin:0; 
-  padding:0;
- color: white;
- text-align: center;
-}
-
-body  { 
-background-color: rgba(40, 46, 158, 0.874);
-font-family: 'Times New Roman', Times, serif;
-color: black;
-}
+<!DOCTYPE html>
+<html lang="zxx"></html>
+<html>  
+<head> 
+   <title> NSCC RIDESHARE </title>
+   <link rel="stylesheet" type="text/css" href="style.css" >
+   <meta charset="utf-8" /> 
+   </head>
+   <body> 
+<header> 
 
 
-header{ 
-background-color: rgb(252, 245, 245);
-color: rgb((39, 11, 200)47, 247, 247)
-text-aligncenter;
-padding: 20px;
-}
-
-nav ul {
-color: white;
-  list-style: none;
-
-}
+<h1> NSCC RIDESHARE </h1>
+<h2> getting people places</h2>
+<nav > 
+<ul>
+<li><a href=" #">home </a></li>
+<li><a href="# "> about RIDESHARE </a> </li>
+<li><a href="# "> contact us  </a> </li>
+<li><a href="#">  become a driver today </a> </li>
+<li><a href="#">  Frequently asked questions </a></li>
 
 
-nav ul Li {
-display: inline;
-margin-right: 20px;
-margin-left: 20px;
 
 
-}
 
-p { text-align: center;
-     color: black;
-}
- 
-footer { text-align: center;
-    color: black;
-    text-indent: 30px;
-
-}
-
-h3 { text-align: center;
-  color: black;
+</ul>
+</nav>
+</header>
+<main> 
+<section> 
+<h3> </h3>
+<p>   </p>
+</section>
+</main>
 
 
-}
 
